force-app/main/default/objects/Additional_Information_NL_Financial_Item__c/Additional_Information_NL_Financial_Item__c.object-meta.xml
<CustomObject>
    <description>A CreditsafeCompanyAdditionalInformationNLFinancialItemV2</description>
    <label>Additional Information NL Financial Item</label>
    <nameField>
        <displayFormat>FI-{000000}</displayFormat>
        <label>Additional Information NL Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Information NL Financial Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>