force-app/main/default/objects/Additional_Information_NL_Financial_Item__c/fields/Consolidated_Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Subsidiaries__c</fullName>
    <description>The number of consolidated subsidiaries.</description>
    <label>Consolidated Subsidiaries</label>
    <length>255</length>
    <type>Text</type>
</CustomField>