force-app/main/default/objects/Additional_Information_NL_Financial_Item__c/fields/Creditsafe_Company_Additional_Info_NL__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Additional_Info_NL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeCompanyAdditionalInformationNLAdditionalInformationV2</description>
    <label>Creditsafe Company Additional Info NL</label>
    <referenceTo>Creditsafe_Company_Additional_Info_NL__c</referenceTo>
    <relationshipLabel>Additional Information NL Financial Item</relationshipLabel>
    <relationshipName>Additional_Information_NL_Financial_Item</relationshipName>
    <type>Lookup</type>
</CustomField>