force-app/main/default/objects/Additional_Information_NL_Financial_Item__c/fields/Creditsafe_Company_Report_Full__c.field-meta.xml
<CustomField>
    <fullName>Creditsafe_Company_Report_Full__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A detailed report about a company.</description>
    <label>Creditsafe Company Report Full</label>
    <referenceTo>Creditsafe_Company_Report_Full__c</referenceTo>
    <relationshipLabel>Additional Information NL Financial Item</relationshipLabel>
    <relationshipName>Additional_Information_NL_Financial_Item</relationshipName>
    <type>Lookup</type>
</CustomField>