force-app/main/default/objects/Additional_Information_NL_Financial_Item__c/fields/Date_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Date_Year_End__c</fullName>
    <description>The end date of the financial period that the accounts relate to.</description>
    <label>Date Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>